--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,9 @@
                     <a class="active" href="/home">Home</a>
                 </li>
                 <li>
+                    <a href="/add">Add Coupon</a>
+                </li>
+                <li>
                     <a href="/about">About</a>
                 </li>
                 {% if 'email' not in session %}
