--- a/templates/contact.html
+++ b/templates/contact.html
@@ -88,10 +88,10 @@
                     <a href="/home">Home</a>
                 </li>
                 <li>
-                    <a class="active" href="/about">About</a>
+                    <a href="/about">About</a>
                 </li>
                 <li>
-                    <a href="/contact">Contact</a>
+                    <a class="active" href="/contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -105,16 +105,11 @@
     </nav>
 
     <div class="container content">
-        <div style="text-align: center; font-weight: 900;">About Us</div>
-        <p>
-            CouponShare is a matchmaking website for people with coupons that they would not be using and for
-            people who wants to avail discounts by finding right coupons for themselves.
-            CouponShare Uses a basic point based system. Each coupon added awards +1 point and each redemption
-            awards -1 point.
-            You simply need to Signup/Login and you will be awarded +1 point that can be used to unlock a coupon
-            and will subsequently be awarded -1 points.
-            Each time you add a new valid coupon, you are awarded with +1 point.
-            Keep Adding coupons to redeem and avail heavy discounts!
+        <div style="text-align: center; font-weight: 900;">Contact Us</div>
+        <p style="text-align:center;">
+            Email : <a href="mailto:Support@CouponShare.com">Support@CouponShare.com</a> <br>
+            GitHub : <a href="www.github.com/rushilg13">www.Github.com/rushilg13</a> <br>
+            LinkedIn : <a href="linkedin.com/in/rushil-goel/">www.Linkedin.com/in/rushil-goel</a> <br>
         </p>
     </div>
 </body>
