--- a/templates/contact.html
+++ b/templates/contact.html
@@ -108,8 +108,8 @@
         <div style="text-align: center; font-weight: 900;">Contact Us</div>
         <p style="text-align:center;">
             Email : <a href="mailto:Support@CouponShare.com">Support@CouponShare.com</a> <br>
-            GitHub : <a href="www.github.com/rushilg13" target="_blank">www.Github.com/rushilg13</a> <br>
-            LinkedIn : <a href="linkedin.com/in/rushil-goel/" target="_blank">www.Linkedin.com/in/rushil-goel</a> <br>
+            GitHub : <a href="http://www.github.com/rushilg13" target="_blank">www.Github.com/rushilg13</a> <br>
+            LinkedIn : <a href="http://linkedin.com/in/rushil-goel/" target="_blank">www.Linkedin.com/in/rushil-goel</a> <br>
         </p>
     </div>
 </body>
