--- a/templates/contact.html
+++ b/templates/contact.html
@@ -88,7 +88,7 @@
                     <a href="/home">Home</a>
                 </li>
                 <li>
-                    <a href="/about">About</a>
+                    <a href="/about_us">About</a>
                 </li>
                 <li>
                     <a class="active" href="/contact">Contact</a>
