--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -85,10 +85,10 @@
         <div class="midnav">
             <ul>
                 <li>
-                    <a href="/home">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
-                    <a class="active" href="/about">About</a>
+                    <a class="active" href="/about_us">About</a>
                 </li>
                 <li>
                     <a href="/contact">Contact</a>
